--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,10 @@ body{
 	background-color: aquamarine;
 }
 
-.block__img{
-	width: 300px;
-	border: 1px solid #000;
+p{
+	color: brown;
+}
+
+h2{
+	font-size: 50px;
 }
